# my_lang

.github/workflows/: docker.yml
lexer/: comp_clang.txt  comp_sysu.txt  di.txt  lexer.hh  lexer.l  main.cc  ori.txt  sysu.txt  test.sysu.c
parser/: 1.sh  CMakeLists.txt  ToJson.cpp  ToJson.hpp  Typing.cpp  asg.hpp  di.txt  exam.sh  main.cc  main.cpp  ori_json.json  ori_json.txt  ori_tree.txt  parser.hh  parser.y  sysu.txt  table.txt  test.sysu.c  update.sh
parser/debug/: di.txt  ori_json.json  ori_tree.txt  ori_yaml.yaml  sysu.json  sysu.yaml  test.sysu.c
parser/scripts/: 1.sh  2.sh  a.py  all.sh  all_par1.sh  all_par2.sh  clang1.sh  clang2.sh  comp1.sh  comp2.sh  compare.py  compare2.py  compare3.py  compare_clang1.py  compare_clang2.py  compare_sysu1.py  compare_sysu2.py  hand_in.sh  sysu1.sh  sysu2.sh  update.sh
